--- a/src/templates/road_new_properties.html
+++ b/src/templates/road_new_properties.html
@@ -37,11 +37,11 @@ a{
         <input type="text" id="rd_name" name="rd_name" style="display: inline; width: 50%">
 
    <div>
-        <label for="block">Block :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+        <label for="block">Block :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <input type="text" id="block" name="block" style="display: inline; width: 15%">
    </div>
    <div class="form-group">
-        <label for="member">Total Culvert:&nbsp; </label>
+        <label for="member">Total Culvert: </label>
         <input type="text" id="member" name="member" value="00" size="2" maxlength="2" onchange="createFields(this)" ><br />
    <div id="header" style="width:864px;">
     <div id="container" style="margin: 0 auto; width:855px;"></div>
