--- a/src/templates/road_new_properties.html
+++ b/src/templates/road_new_properties.html
@@ -37,12 +37,12 @@ a{
         <input type="text" id="rd_name" name="rd_name" style="display: inline; width: 50%">
 
    <div>
-        <label for="block">Block :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+        <label for="block">Block :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <input type="text" id="block" name="block" style="display: inline; width: 15%">
    </div>
    <div class="form-group">
-        <label for="member">Total Culvert: </label>
-        <input type="text" id="member" name="member" value="00" size="2" maxlength="2" onchange="createFields(this)" ><br />
+        <label for="member">Total Culvert:&nbsp; </label>
+        <input type="text" id="member" name="member" value="0" size="1" maxlength="2" onchange="createFields(this)" ><br />
    <div id="header" style="width:864px;">
     <div id="container" style="margin: 0 auto; width:855px;"></div>
    </div>
@@ -123,7 +123,7 @@ function createFields(that) {
                             '</select>'+
                         '</div>' +
                         '<div style="display: flex; flex-direction: column; width: 10%">' +
-                            '<input type="text" id='+cChainage+' name='+cChainage+'required>' +
+                            '<input type="text" id='+cChainage+' name='+cChainage+' required>' +
                         '</div>' +
                         '<div style="display: flex; flex-direction: column; width: 7% ">' +
                             '<input type="text" id='+cSpan+' name='+cSpan+' required>' +
